[package]
name = "helm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "helm-cli","helm-core", "helm-db", "helm-net"]

[dependencies]
helm-core = { path = "./helm-core" }
helm-net = { path = "./helm-net" }
helm-db = { path = "./helm-db" }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
rand = "0.9.2"
const-hex = "1.17.0"

# HTTP API and serialization dependencies used by the top-level binary
axum = { version = "0.8", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0" }
