[package]
name = "helm-net"
version = "0.1.0"
edition = "2024"

[dependencies]
helm-core = { path = "../helm-core" }

serde = { version = "1.0", features = ["derive"], optional = true }
const-hex = { version = "1.17.0", optional = true }
ethnum = { version = "1.5.2", features = ["serde"], optional = true }

libp2p = { version = "0.56", features = ["gossipsub", "mdns", "tcp", "noise", "yamux", "tokio", "request-response", "cbor"], optional = true }
tokio = { version = "1.0", features = ["sync", "time", "macros"], optional = true }
postcard = { version = "1.1", features = ["alloc"], optional = true }
tracing = { version = "0.1", optional = true }

dotenv = { version = "0.15.0", optional = true }

[features]
default = ["full"]
protocol = ["serde", "const-hex", "ethnum"]
full = ["libp2p", "tokio", "postcard", "tracing", "config", "protocol"]
config = ["dotenv"]
